--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -533,6 +533,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
 
 <script>
+  if (window.location.pathname.endsWith('artofvisualdata.html')) {
 document.addEventListener("DOMContentLoaded", function() {
   const videos = document.querySelectorAll("video");
   const observer = new IntersectionObserver((entries) => {
@@ -547,6 +548,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
   videos.forEach(video => observer.observe(video));
 });
+  }
 </script>
 
 </body>
