--- a/Home.html
+++ b/Home.html
@@ -76,7 +76,7 @@
       <article class="project1">
         <a href="project1/artofvisualdata.html">  
           <div class="thumbnailParent">
-            <video alt="'Art of Visual Data' displaying multiple website screens, highlighting data visualization." class="Thumbnail" autoplay muted loop>
+            <video alt="'Art of Visual Data' displaying multiple website screens, highlighting data visualization." class="Thumbnail" autoplay muted loop playsinline>
               <source src="https://dl.dropboxusercontent.com/scl/fi/3xfbn9zcbm08zcmpq7zw5/aovdWebMotionVideo.mp4?rlkey=qh4srzpvmx9lint0lv9gofwyp&st=tbvlfxyw" type="video/mp4">
             </video>
           </div>
@@ -120,7 +120,7 @@
       <article class="project4">
         <a href="#">  
           <div class="thumbnailParent">
-            <video alt="Featuring gamified and graphical scenes recreating the essence of the show." class="Thumbnail2" autoplay muted loop>
+            <video alt="Featuring gamified and graphical scenes recreating the essence of the show." class="Thumbnail2" autoplay muted loop playsinline>
               <source src="https://dl.dropboxusercontent.com/scl/fi/jfqz2oaxaph1u0idsuy2j/queenMockup.mp4?rlkey=dw375tplyzeia1mtt3bs322np&st=ib1o4t0l" type="video/mp4">
             </video>
           </div>
