--- a/Home.html
+++ b/Home.html
@@ -17,12 +17,16 @@
 <section class="fixedContainer">
   <div class="navContainer">
     <header class="navbar">
-      <a href="Home.html" class="logo">richard</a>
+      <div class="brand">
+        <a href="Home.html" class="logo">richard</a>
+      </div>
       <nav class="nav-links">
-        <li><a href="#">about</a></li>
-        <li><a href="#">work</a></li>
-        <li><a href="#">tidbits</a></li>
-        <li><a href="#">resume</a></li>
+        <ul>
+          <li><a href="#">about</a></li>
+          <li><a href="#">work</a></li>
+          <li><a href="#">tidbits</a></li>
+          <li><a href="#">resume</a></li>
+        </ul>
       </nav>
     </header>
     <div class="divider"></div>
@@ -145,19 +149,19 @@
         <div class="label">
           FOLLOW<img src="media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
         </div>
-        <div class="connectBtn">
-          <ul><a href="https://www.linkedin.com/in/richard-lau-70003a217/" class="connectionLink" target="_blank" rel="noopener">LinkedIn</a></ul>
-          <ul><a href="https://www.instagram.com/richard_bingo/" class="connectionLink" target="_blank" rel="noopener">Instagram</a></ul>
-        </div>
+        <ul class="connectBtn">
+          <li><a href="https://www.linkedin.com/in/richard-lau-70003a217/" class="connectionLink" target="_blank" rel="noopener">LinkedIn</a></li>
+          <li><a href="https://www.instagram.com/richard_bingo/" class="connectionLink" target="_blank" rel="noopener">Instagram</a></li>
+        </ul>
       </div>
       <div class="email">
         <div class="label">
           EMAIL<img src="media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
         </div>
-        <div class="connectBtn">
-          <address><a href="mailto:richardlau1167@gmail.com" class="connectionLink">richardlau1167@gmail.com</a></address>
+        <ul class="connectBtn">
+          <li><a href="mailto:richardlau1167@gmail.com" class="connectionLink">richardlau1167@gmail.com</a></li>
           <img src="media/poro_refined.gif" alt="8-Bit Poro from League of Legends." class="poro"></img>
-        </div>
+        </ul>
       </div>
     </section>
   </section>
