--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -17,12 +17,16 @@
 <section class="fixedContainer">
   <div class="navContainer">
     <header class="navbar">
-      <a href="../Home.html" class="logo">richard</a>
+      <div class="brand">
+        <a href="../Home.html" class="logo">richard</a>
+      </div>
       <nav class="nav-links">
-        <li><a href="#">about</a></li>
-        <li><a href="#">work</a></li>
-        <li><a href="#">tidbits</a></li>
-        <li><a href="#">resume</a></li>
+        <ul>
+          <li><a href="#">about</a></li>
+          <li><a href="#">work</a></li>
+          <li><a href="#">tidbits</a></li>
+          <li><a href="#">resume</a></li>
+        </ul>
       </nav>
     </header>
     <div class="divider"></div>
@@ -81,7 +85,7 @@
     </div>
 
     <figure class="projectThumbnail2">
-      <video alt="Desktop Mockup of Art of Visual Data's article landing page." class="mockupImage" autoplay muted loop>
+      <video alt="Desktop Mockup of Art of Visual Data's article landing page." class="mockupImage" autoplay muted loop playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/10mgjgh2bz2jldbi92nv5/articleHomeLanding.mp4?rlkey=qkw5mdwezibsnimezezf6rlaz&st=sf4w4nnp" type="video/mp4">
       </video>
     </figure>
@@ -411,13 +415,13 @@
     <p class="paragraphStyle2" id="finalIntroduction">Art of Visual Data (AoVD) is a platform and brand that translates complex global datasets into visual stories, improving data literacy for all through accessible design, storytelling, and gamification. The ultimate goal of AoVD is to advocate awareness of global issues through the power of design.</p>
     
     <figure class="finalDesignImages">
-      <video alt="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage" autoplay muted loop>
+      <video alt="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage" autoplay muted loop playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/y1w3c3i9j4l52jrnzc6mh/homePageMockup.mp4?rlkey=gybzsfu61upzaqydcbquip8b6&st=ho6cv7bz" type="video/mp4">
       </video>
       
       <article class="videoCaptionCombination1">
         <div class="imageVer1">
-          <video alt="The landing page of the article. Summary of key points, highlighting Sub-Saharan Africa's lag behind the world average." autoplay muted loop>
+          <video alt="The landing page of the article. Summary of key points, highlighting Sub-Saharan Africa's lag behind the world average." autoplay muted loop playsinline>
             <source src="https://dl.dropboxusercontent.com/scl/fi/dw57ko91xz0a219t1vwpn/compressed_animation.mp4?rlkey=nyils2suijqrpxvba83fn1bya&st=w3o0x8qg" type="video/mp4">
           </video>
         </div>
@@ -437,7 +441,7 @@
           </p>        
         </aside>
         <div class="imageVer1">
-          <video alt="Detailed datasets comparing multiple SDGs. Text of key points in the top right, chatbot implementation in the bottom right, metric comparison on the right, interactive graph in the center-left." autoplay muted loop>
+          <video alt="Detailed datasets comparing multiple SDGs. Text of key points in the top right, chatbot implementation in the bottom right, metric comparison on the right, interactive graph in the center-left." autoplay muted loop playsinline>
             <source src="https://dl.dropboxusercontent.com/scl/fi/qke6qhej6rqfl4ifs7xtt/detailedGraph.mp4?rlkey=p2sg16qpybxby0po9a2m8hmjy&st=wlsd7fzq" type="video/mp4">
           </video>
         </div>
@@ -445,19 +449,19 @@
     </figure>
 
     <figure class="customGrid">
-        <video class="gridItem" alt="Navigation bar opening and closing, transforming 3-line hamburger icon into 4-line bar graph when hovered. When clicked lines transform into an X." autoplay muted loop>
+        <video class="gridItem" alt="Navigation bar opening and closing, transforming 3-line hamburger icon into 4-line bar graph when hovered. When clicked lines transform into an X." autoplay muted loop playsinline>
           <source src="https://dl.dropboxusercontent.com/scl/fi/sco14w2al1by24he9q939/interactionAmockup.mp4?rlkey=ncy4ilqlowqxbwmd40mko2bkf&st=37fntiug" type="video/mp4">
         </video>
-        <video class="gridItem" alt="Hover effects over sharing elements, slightly tilting icons." autoplay muted loop>
+        <video class="gridItem" alt="Hover effects over sharing elements, slightly tilting icons." autoplay muted loop playsinline>
           <source src="https://dl.dropboxusercontent.com/scl/fi/6d9532jta13z0yj57hgea/interactionB.mp4?rlkey=zhazv1uj3t3svr7ge6c37fvk2&st=ypuptjp0" type="video/mp4">
         </video>
-        <video class="gridItem" alt="Hover effect over bubble chart's bubbles. Specific data is presented such as pie chart, percentage, name, and date." autoplay muted loop>
+        <video class="gridItem" alt="Hover effect over bubble chart's bubbles. Specific data is presented such as pie chart, percentage, name, and date." autoplay muted loop playsinline>
           <source src="https://dl.dropboxusercontent.com/scl/fi/4mmemsu4fie4oih98cgaj/interactionC.mp4?rlkey=b1i4uhi4j4r1ryhqfvilbeahq&st=l4i2jgb9" type="video/mp4">
         </video>
     </figure>  
 
     <figure id="motionGraphic">
-      <video alt="Motion graphic of Art of Visual Data's branding, purpose, and mockups." class="mockupImage" loop controls>
+      <video alt="Motion graphic of Art of Visual Data's branding, purpose, and mockups." class="mockupImage" loop controls playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/3oevj4f6st0b3ephwls05/aovdMotionPresentationTrimmed.mp4?rlkey=6la2199f7nhiudzr63714yvy2&st=hgtj8cna" type="video/mp4">
       </video>
     </figure>
@@ -477,7 +481,7 @@
     <div class="sectionDivider"></div>  
     <p class="paragraphStyle2" id="finalIntroduction">The 'DataSense' tool of the AoVD website is designed for the general public interested in improving their data literacy skills. This tool gamifies learning with rankings, achievements, and Zeigarnik effect-based progress bars, encouraging reflection and long-term engagement.</p>
     <figure>
-      <video alt="Desktop Mockup of Art of Visual Data's DataSense tool. Initially presents user statistics and progresses towards questions and lessons." class="mockupImage" autoplay muted loop>
+      <video alt="Desktop Mockup of Art of Visual Data's DataSense tool. Initially presents user statistics and progresses towards questions and lessons." class="mockupImage" autoplay muted loop playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/z3vtz1xsl6lsrj4vyiqee/dataSenseMockup.mp4?rlkey=cfzg5cfzkgrxctwamubixah2i&st=bxuhd7cf" type="video/mp4">
       </video>
     </figure>
@@ -533,7 +537,6 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
 
 <script>
-  if (window.location.pathname.endsWith('artofvisualdata.html')) {
 document.addEventListener("DOMContentLoaded", function() {
   const videos = document.querySelectorAll("video");
   const observer = new IntersectionObserver((entries) => {
@@ -548,7 +551,6 @@ document.addEventListener("DOMContentLoaded", function() {
 
   videos.forEach(video => observer.observe(video));
 });
-  }
 </script>
 
 </body>
