--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="navContainer">
     <header class="navbar">
       <div class="brand">
-        <a href="Home.html" class="logo">richard</a>
+        <a href="index.html" class="logo">richard</a>
       </div>
       <nav class="nav-links">
         <ul>
