--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -18,7 +18,7 @@
   <div class="navContainer">
     <header class="navbar">
       <div class="brand">
-        <a href="../Home.html" class="logo">richard</a>
+        <a href="../index.html" class="logo">richard</a>
       </div>
       <nav class="nav-links">
         <ul>
@@ -487,6 +487,42 @@
     </figure>
   </section>
 
+  <section class="researchSummaryContainer">
+    <header class="researchSummary">
+      <img src="caseStudy1/leafPixel.svg" alt="Vines in a Pixel Art Style." id="flipped" class="vines"></img>  
+      <div class="headerContent" style="white-space: nowrap;">
+        <h3>design achievements</h3>
+        <div class="researchTitle">
+          <img src="caseStudy1/research.svg" alt="Research Icon."></img>
+          <h2>What did we make?</h2> 
+        </div>
+      </div>
+          <img src="caseStudy1/leafPixel.svg" alt="Vines in a Pixel Art Style." class="vines"></img> 
+    </header>
+    <div class="researchPoints">
+      <article class="point">
+        <header>
+          <h4>Clarity</h4>
+          <img src="caseStudy1/accessibility.svg" alt="Eye Vector."></img>
+        </header>
+        <p class="paragraphStyle2">Consistent graphing tools paired with chatbot support helped reduce information overload. This noticeably <a href="https://docs.google.com/spreadsheets/d/13O6U7T7qE4G8gcWiEM26bFALU7AfDu15UOGy_tbDquU/edit?usp=sharing" class="reference2" target="_blank" rel="noopener">boosted user confidence by 60%</a> and made navigating data more intuitive.</p>
+      </article>
+       <article class="point">
+        <header>
+          <h4>Narrative</h4>
+          <img src="caseStudy1/narrative.svg" alt="Book Vector."></img>
+        </header>
+        <p class="paragraphStyle2">Instead of overwhelming users with raw data, we framed the experience around three core points. This helped with our storytelling, improved <a href="https://docs.google.com/spreadsheets/d/13O6U7T7qE4G8gcWiEM26bFALU7AfDu15UOGy_tbDquU/edit?usp=sharing" class="reference2" target="_blank" rel="noopener">the efficiency of how our users made connections by over 67.7%</a>.</p>
+      </article>     
+       <article class="point">
+        <header>
+          <h4>Interactivity</h4>
+          <img src="caseStudy1/interactivity.svg" alt="Hand Clicking Vector."></img>
+        </header>
+        <p class="paragraphStyle2"><a href="https://docs.google.com/spreadsheets/d/13O6U7T7qE4G8gcWiEM26bFALU7AfDu15UOGy_tbDquU/edit?usp=sharing" class="reference2" target="_blank" rel="noopener">To improved the user’s data comprehension speeds up by 9x</a>, we utilized interactive elements such as hover effects and animated graph transitions to convey the full story without adding clutter.</p>
+      </article>
+    </div>  
+  </section>  
 
   <div class="bigSpaceTemp"></div>
 
