--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -18,7 +18,7 @@
   <div class="navContainer">
     <header class="navbar">
       <div class="brand">
-        <a href="../index.html" class="logo">richard</a>
+        <a href="https://richardlau.ca" class="logo">richard</a>
       </div>
       <nav class="nav-links">
         <ul>
