--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
 
     <div class="projectList">
       <article class="project1">
-        <a href="project1/artofvisualdata.html">  
+        <a href="https://richardlau.ca/project1/artofvisualdata">  
           <div class="thumbnailParent">
             <video alt="'Art of Visual Data' displaying multiple website screens, highlighting data visualization." class="Thumbnail" autoplay muted loop playsinline>
               <source src="https://dl.dropboxusercontent.com/scl/fi/3xfbn9zcbm08zcmpq7zw5/aovdWebMotionVideo.mp4?rlkey=qh4srzpvmx9lint0lv9gofwyp&st=tbvlfxyw" type="video/mp4">
@@ -86,8 +86,8 @@
           </div>
         </a>
         <div class="projectHeaders">
-          <a href="project1/artofvisualdata.html" tabindex="-1">Art of Visual Data¹</a>
-          <a href="project1/artofvisualdata.html" class="more" tabindex="-1">see project</a>
+          <a href="https://richardlau.ca/project1/artofvisualdata" tabindex="-1">Art of Visual Data¹</a>
+          <a href="https://richardlau.ca/project1/artofvisualdata" class="more" tabindex="-1">see project</a>
           </div>
         <p class="description">Voicing global issues through interactive data visualization and animated storytelling</p>
         <div class="space"></div>
