--- a/home.html
+++ b/home.html
@@ -3,13 +3,20 @@
 <!-- Designed and coded by Richard Lau -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Richard Lau RGD</title>
-    <link rel="icon" href="media/RL.png" type="image/png">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="portfolioStyles/siteToolkit.css">
-    <link rel="stylesheet" href="projects.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Richard Lau RGD</title>
+  <link rel="icon" href="media/RL.png" type="image/png">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="portfolioStyles/siteToolkit.css">
+  <link rel="stylesheet" href="projects.css">
+
+  <!-- Open Graph tags -->
+  <meta property="og:title" content="Richard Lau RGD">
+  <meta property="og:description" content="What's up! It's Richard Lau, a designer with an obsession for yadayadayada, you get the bit...">
+  <meta property="og:image" content="media/type_specimen_mockup_concrete.png">
+  <meta property="og:url" content="https://richardlau.ca">
+  <meta property="og:type" content="website">
 </head>
 
 <body>
