--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
   <!-- Open Graph tags -->
   <meta property="og:title" content="Richard Lau RGD">
   <meta property="og:description" content="What's up! It's Richard Lau, a designer with an obsession for yadayadayada, you get the bit...">
-  <meta property="og:image" content="media/type_specimen_mockup_concrete.png">
-  <meta property="og:url" content="https://richardlau.ca">
+  <meta property="og:image" content="https://richardlau.ca/media/type_specimen_mockup_concrete.png">
+  <meta property="og:url" content="https://richardlau.ca/">
   <meta property="og:type" content="website">
 </head>
 
