--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
   <!-- Open Graph tags -->
   <meta property="og:title" content="Richard Lau RGD">
-  <meta property="og:description" content="What's up! It's Richard Lau, a designer with an obsession for yadayadayada, you get the bit...">
+  <meta property="og:description" content="What's up! I'm Richard, a nationally recognized designer and a teacher with an obsession for storybuilding, esports media, yadayadayada you get the bit...">
   <meta property="og:image" content="https://richardlau.ca/media/type_specimen_mockup_concrete.png">
   <meta property="og:url" content="https://richardlau.ca/">
   <meta property="og:type" content="website">
@@ -152,7 +152,7 @@
 
   <section class="preFooter">
     <section class="connections">
-      <div class="follow">
+      <article class="follow">
         <div class="label">
           FOLLOW<img src="media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
         </div>
@@ -160,8 +160,8 @@
           <li><a href="https://www.linkedin.com/in/richard-lau-70003a217/" class="connectionLink" target="_blank" rel="noopener">LinkedIn</a></li>
           <li><a href="https://www.instagram.com/richard_bingo/" class="connectionLink" target="_blank" rel="noopener">Instagram</a></li>
         </ul>
-      </div>
-      <div class="email">
+      </article>
+      <article class="email">
         <div class="label">
           EMAIL<img src="media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
         </div>
@@ -169,7 +169,7 @@
           <li><a href="mailto:richardlau1167@gmail.com" class="connectionLink">richardlau1167@gmail.com</a></li>
           <img src="media/poro_refined.gif" alt="8-Bit Poro from League of Legends." class="poro"></img>
         </ul>
-      </div>
+      </article>
     </section>
   </section>
 
