--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -522,13 +522,96 @@
         <p class="paragraphStyle2"><a href="https://docs.google.com/spreadsheets/d/13O6U7T7qE4G8gcWiEM26bFALU7AfDu15UOGy_tbDquU/edit?usp=sharing" class="reference2" target="_blank" rel="noopener">To improved the user’s data comprehension speeds up by 9x</a>, we utilized interactive elements such as hover effects and animated graph transitions to convey the full story without adding clutter.</p>
       </article>
     </div>  
-  </section>  
+  </section>
+  
+  <section class="reflection">
+    <header class="gatheringDataHeaders">
+      <h3>reflection and conclusion</h3>
+      <h2>Innovating stories for the future</h2>
+    </header>
+    <div class="sectionDivider"></div>
+    <p class="paragraphStyle2">I believe Art of Visual Data has the potential to innovate a world where we all understand each other a bit more better—not just through accessible media, but by actually voicing issues for those who lack representation themselves.</p>
 
-  <div class="bigSpaceTemp"></div>
+    <div class="userQuote">
+      <blockquote class="gatheringDataHeaders">
+        <h2>AoVD makes reading data so much more enjoyable compared to raw datasets.</h2>
+        <p class="paragraphStyle2">— Eric, 3D Artist</p>
+      </blockquote>
+      <video alt="Desktop Mockup of Art of Visual Data's article landing page." class="quoteVideo" autoplay muted loop playsinline>
+        <source src="https://dl.dropboxusercontent.com/scl/fi/10mgjgh2bz2jldbi92nv5/articleHomeLanding.mp4?rlkey=qkw5mdwezibsnimezezf6rlaz&st=sf4w4nnp" type="video/mp4">
+      </video>
+    </div>
+
+    <div class="learnings">
+      <header class="learnHead">
+        <img src="caseStudy1/search.svg" alt="Magnifying Glass Icon."></img>
+        <h2>So what did I learn?</h2>
+      </header>
+
+      <ul>
+        <li>Complex data doesn’t necessarily require complex graphs, just good hierarchy and colour coding!</li>
+        <li>It’s important to not mislead with data. Design with honesty.</li>
+        <li>It’s important to always keep accessibility in mind while designing, if they can’t see it, it doesn’t exist!</li>
+        <li>People love a good story. Build narratives, make an impact.</li>
+        <li>Relax on the animations, our developers don’t need overtime!</li>
+        <br>       
+      </ul>
+    </div>  
+  </section>
+
+  <section class="relatedProjects">
+    <header class="gatheringDataHeaders">
+      <h2>Related Projects</h2>
+    </header>
+    <figure class="relatedProjectContainer">
+      <a href="#">
+        <img src="../media/type_specimen_mockup_concrete.png" alt="Art of Visual Data Typeface Booklet.">
+      </a>
+    </figure>
+    <div class="project02">
+      <ul class="tags">
+        <li>Typography</li>
+        <li>Data Visualization</li>
+        <li>Print Design</li>
+        <li>System Building</li>
+      </ul>
+        <h3><a href="#" class="seeProject">see project</a></h3>
+    </div>
+  </section>
+
+  <section class="preFooter">
+    <section class="connections">
+      <article class="follow">
+        <div class="label">
+          FOLLOW<img src="../media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
+        </div>
+        <ul class="connectBtn">
+          <li><a href="https://www.linkedin.com/in/richard-lau-70003a217/" class="connectionLink" target="_blank" rel="noopener">LinkedIn</a></li>
+          <li><a href="https://www.instagram.com/richard_bingo/" class="connectionLink" target="_blank" rel="noopener">Instagram</a></li>
+        </ul>
+      </article>
+      <article class="email">
+        <div class="label">
+          EMAIL<img src="../media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
+        </div>
+        <ul class="connectBtn">
+          <li><a href="mailto:richardlau1167@gmail.com" class="connectionLink">richardlau1167@gmail.com</a></li>
+          <img src="../media/poro_refined.gif" alt="8-Bit Poro from League of Legends." class="poro"></img>
+        </ul>
+      </article>
+    </section>
+  </section>  
 
 
 </main>
 <!-- Footer/Scripts -->
+ <footer class="footerContent">
+  <div class="divider"></div>
+  <div class="siteInfo">
+    <p>© 2023 Richard Lau. All rights reserved.</p>
+    <p>imagined and crafted by richard | ft. healthy sleep schedule</p>
+  </div>
+</footer>
  
 <!-- This is the navigation bar scroll effect -->
 <script>  
