--- a/home.html
+++ b/home.html
@@ -24,9 +24,7 @@
 <section class="fixedContainer">
   <div class="navContainer">
     <header class="navbar">
-      <div class="brand">
-        <a href="https://richardlau.ca" class="logo">richard</a>
-      </div>
+      <a href="https://richardlau.ca" class="logo" aria-label="Button to Homepage">richard</a>
       <nav class="nav-links">
         <ul>
           <li><a href="#">about</a></li>
@@ -85,61 +83,61 @@
 
     <div class="projectList">
       <article class="project1">
-        <a href="https://richardlau.ca/project1/artofvisualdata">  
+        <a href="https://richardlau.ca/project1/artofvisualdata"> <span class="visually-hidden">View project: Art of Visual Data Website</span>  
           <div class="thumbnailParent">
-            <video alt="'Art of Visual Data' displaying multiple website screens, highlighting data visualization." class="Thumbnail" autoplay muted loop playsinline>
+            <video aria-label="Art of Visual Data displaying multiple website screens, highlighting data visualization." class="Thumbnail" autoplay muted loop playsinline>
               <source src="https://dl.dropboxusercontent.com/scl/fi/3xfbn9zcbm08zcmpq7zw5/aovdWebMotionVideo.mp4?rlkey=qh4srzpvmx9lint0lv9gofwyp&st=tbvlfxyw" type="video/mp4">
             </video>
           </div>
         </a>
-        <div class="projectHeaders">
+        <header class="projectHeaders">
           <a href="https://richardlau.ca/project1/artofvisualdata" tabindex="-1">Art of Visual Data¹</a>
-          <a href="https://richardlau.ca/project1/artofvisualdata" class="more" tabindex="-1">see project</a>
-          </div>
+          <a href="https://richardlau.ca/project1/artofvisualdata" class="more" tabindex="-1">see project<span class="visually-hidden">details for Art of Visual Data</span></a>
+        </header>
         <p class="description">Voicing global issues through interactive data visualization and animated storytelling</p>
         <div class="space"></div>
       </article>
 
       <article class="project2">
-        <a href="#">  
+        <a href="#"><span class="visually-hidden">View project: Art of Visual Data Typeface</span>  
           <div class="thumbnailParent">
             <img src="media/type_specimen_mockup_concrete.png" alt="Type Specimen booklet about the typeface called Art of Visual Data." class="Thumbnail2"></img>
           </div>
         </a>
-        <div class="projectHeaders">
+        <header class="projectHeaders">
           <a href="#" tabindex="-1">AoVD Typeface²</a>
-          <a href="#" class="more" tabindex="-1">see project</a>
-          </div>
+          <a href="#" class="more" tabindex="-1">see project<span class="visually-hidden">details for AoVD Typeface</span></a>
+        </header>
         <p class="description">A typeface system which visualizes statistics in letter frequencies within the English alphabet</p>
         <div class="space"></div>
       </article>
 
       <article class="project3">
-        <a href="#">  
+        <a href="#"><span class="visually-hidden">View project: The Spiralist</span>  
           <div class="thumbnailParent">
             <img src="media/spiralist_cropped_mockup.gif" alt="Magazine spreads for 'The Spiralist,' featuring spirals created by a contrast of blue and gold blocks of text, connected across the spread." class="Thumbnail2"></img>
           </div>
         </a>
-        <div class="projectHeaders">
+        <header class="projectHeaders">
           <a href="#" tabindex="-1">The Spiralist</a>
-          <a href="#" class="more" tabindex="-1">see project</a>
-          </div>
+          <a href="#" class="more" tabindex="-1">see project<span class="visually-hidden">details for The Spiralist</span></a>
+        </header>
         <p class="description">Typographical magazine feature about the existence of spirals within everything in the world</p>
         <div class="space"></div>
       </article>
 
       <article class="project4">
-        <a href="#">  
+        <a href="#"><span class="visually-hidden">View project: The Queen's Gambit</span>  
           <div class="thumbnailParent">
-            <video alt="Featuring gamified and graphical scenes recreating the essence of the show." class="Thumbnail2" autoplay muted loop playsinline>
+            <video aria-label="Featuring gamified and graphical scenes recreating the essence of the show." class="Thumbnail2" autoplay muted loop playsinline>
               <source src="https://dl.dropboxusercontent.com/scl/fi/jfqz2oaxaph1u0idsuy2j/queenMockup.mp4?rlkey=dw375tplyzeia1mtt3bs322np&st=ib1o4t0l" type="video/mp4">
             </video>
-          </div>
+          </div> 
         </a>
-        <div class="projectHeaders">
+        <header class="projectHeaders">
           <a href="#" tabindex="-1">The Queen's Gambit</a>
-          <a href="#" class="more">see project</a>
-          </div>
+          <a href="#" class="more">see project<span class="visually-hidden">details for The Queen's Gambit</span></a>
+        </header>
         <p class="description">Reliving 'The Queen's Gambit' through a gamified and graphical experience</p>
         <div class="space"></div>
       </article>
@@ -153,21 +151,21 @@
   <section class="preFooter">
     <section class="connections">
       <article class="follow">
-        <div class="label">
+        <header class="label">
           FOLLOW<img src="media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
-        </div>
+        </header>
         <ul class="connectBtn">
           <li><a href="https://www.linkedin.com/in/richard-lau-70003a217/" class="connectionLink" target="_blank" rel="noopener">LinkedIn</a></li>
           <li><a href="https://www.instagram.com/richard_bingo/" class="connectionLink" target="_blank" rel="noopener">Instagram</a></li>
         </ul>
       </article>
       <article class="email">
-        <div class="label">
+        <header class="label">
           EMAIL<img src="media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
-        </div>
+        </header>
         <ul class="connectBtn">
           <li><a href="mailto:richardlau1167@gmail.com" class="connectionLink">richardlau1167@gmail.com</a></li>
-          <img src="media/poro_refined.gif" alt="8-Bit Poro from League of Legends." class="poro"></img>
+          <li class="poroContainer"><img src="media/poro_refined.gif" alt="8-Bit Poro from League of Legends." class="poro"></img></li>
         </ul>
       </article>
     </section>
