--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -85,7 +85,7 @@
     </div>
 
     <figure class="projectThumbnail2">
-      <video alt="Desktop Mockup of Art of Visual Data's article landing page." class="mockupImage" autoplay muted loop playsinline>
+      <video aria-label="Desktop Mockup of Art of Visual Data's article landing page." class="mockupImage" autoplay muted loop playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/10mgjgh2bz2jldbi92nv5/articleHomeLanding.mp4?rlkey=qkw5mdwezibsnimezezf6rlaz&st=sf4w4nnp" type="video/mp4">
       </video>
     </figure>
@@ -415,13 +415,13 @@
     <p class="paragraphStyle2" id="finalIntroduction">Art of Visual Data (AoVD) is a platform and brand that translates complex global datasets into visual stories, improving data literacy for all through accessible design, storytelling, and gamification. The ultimate goal of AoVD is to advocate awareness of global issues through the power of design.</p>
     
     <figure class="finalDesignImages">
-      <video alt="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage" autoplay muted loop playsinline>
+      <video aria-label="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage" autoplay muted loop playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/y1w3c3i9j4l52jrnzc6mh/homePageMockup.mp4?rlkey=gybzsfu61upzaqydcbquip8b6&st=ho6cv7bz" type="video/mp4">
       </video>
       
       <article class="videoCaptionCombination1">
         <div class="imageVer1">
-          <video alt="The landing page of the article. Summary of key points, highlighting Sub-Saharan Africa's lag behind the world average." autoplay muted loop playsinline>
+          <video aria-label="The landing page of the article. Summary of key points, highlighting Sub-Saharan Africa's lag behind the world average." autoplay muted loop playsinline>
             <source src="https://dl.dropboxusercontent.com/scl/fi/dw57ko91xz0a219t1vwpn/compressed_animation.mp4?rlkey=nyils2suijqrpxvba83fn1bya&st=w3o0x8qg" type="video/mp4">
           </video>
         </div>
@@ -441,7 +441,7 @@
           </p>        
         </aside>
         <div class="imageVer1">
-          <video alt="Detailed datasets comparing multiple SDGs. Text of key points in the top right, chatbot implementation in the bottom right, metric comparison on the right, interactive graph in the center-left." autoplay muted loop playsinline>
+          <video aria-label="Detailed datasets comparing multiple SDGs. Text of key points in the top right, chatbot implementation in the bottom right, metric comparison on the right, interactive graph in the center-left." autoplay muted loop playsinline>
             <source src="https://dl.dropboxusercontent.com/scl/fi/qke6qhej6rqfl4ifs7xtt/detailedGraph.mp4?rlkey=p2sg16qpybxby0po9a2m8hmjy&st=wlsd7fzq" type="video/mp4">
           </video>
         </div>
@@ -449,19 +449,19 @@
     </figure>
 
     <figure class="customGrid">
-        <video class="gridItem" alt="Navigation bar opening and closing, transforming 3-line hamburger icon into 4-line bar graph when hovered. When clicked lines transform into an X." autoplay muted loop playsinline>
+        <video class="gridItem" aria-label="Navigation bar opening and closing, transforming 3-line hamburger icon into 4-line bar graph when hovered. When clicked lines transform into an X." autoplay muted loop playsinline>
           <source src="https://dl.dropboxusercontent.com/scl/fi/sco14w2al1by24he9q939/interactionAmockup.mp4?rlkey=ncy4ilqlowqxbwmd40mko2bkf&st=37fntiug" type="video/mp4">
         </video>
-        <video class="gridItem" alt="Hover effects over sharing elements, slightly tilting icons." autoplay muted loop playsinline>
+        <video class="gridItem" aria-label="Hover effects over sharing elements, slightly tilting icons." autoplay muted loop playsinline>
           <source src="https://dl.dropboxusercontent.com/scl/fi/6d9532jta13z0yj57hgea/interactionB.mp4?rlkey=zhazv1uj3t3svr7ge6c37fvk2&st=ypuptjp0" type="video/mp4">
         </video>
-        <video class="gridItem" alt="Hover effect over bubble chart's bubbles. Specific data is presented such as pie chart, percentage, name, and date." autoplay muted loop playsinline>
+        <video class="gridItem" aria-label="Hover effect over bubble chart's bubbles. Specific data is presented such as pie chart, percentage, name, and date." autoplay muted loop playsinline>
           <source src="https://dl.dropboxusercontent.com/scl/fi/4mmemsu4fie4oih98cgaj/interactionC.mp4?rlkey=b1i4uhi4j4r1ryhqfvilbeahq&st=l4i2jgb9" type="video/mp4">
         </video>
     </figure>  
 
     <figure id="motionGraphic">
-      <video alt="Motion graphic of Art of Visual Data's branding, purpose, and mockups." class="mockupImage" loop controls playsinline>
+      <video aria-label="Motion graphic of Art of Visual Data's branding, purpose, and mockups." class="mockupImage" loop controls playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/3oevj4f6st0b3ephwls05/aovdMotionPresentationTrimmed.mp4?rlkey=6la2199f7nhiudzr63714yvy2&st=hgtj8cna" type="video/mp4">
       </video>
     </figure>
@@ -481,7 +481,7 @@
     <div class="sectionDivider"></div>  
     <p class="paragraphStyle2" id="finalIntroduction">The 'DataSense' tool of the AoVD website is designed for the general public interested in improving their data literacy skills. This tool gamifies learning with rankings, achievements, and Zeigarnik effect-based progress bars, encouraging reflection and long-term engagement.</p>
     <figure>
-      <video alt="Desktop Mockup of Art of Visual Data's DataSense tool. Initially presents user statistics and progresses towards questions and lessons." class="mockupImage" autoplay muted loop playsinline>
+      <video aria-label="Desktop Mockup of Art of Visual Data's DataSense tool. Initially presents user statistics and progresses towards questions and lessons." class="mockupImage" autoplay muted loop playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/z3vtz1xsl6lsrj4vyiqee/dataSenseMockup.mp4?rlkey=cfzg5cfzkgrxctwamubixah2i&st=bxuhd7cf" type="video/mp4">
       </video>
     </figure>
@@ -537,7 +537,7 @@
         <h2>AoVD makes reading data so much more enjoyable compared to raw datasets.</h2>
         <p class="paragraphStyle2">— Eric, 3D Artist</p>
       </blockquote>
-      <video alt="Desktop Mockup of Art of Visual Data's article landing page." class="quoteVideo" autoplay muted loop playsinline>
+      <video aria-label="Desktop Mockup of Art of Visual Data's article landing page." class="quoteVideo" autoplay muted loop playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/10mgjgh2bz2jldbi92nv5/articleHomeLanding.mp4?rlkey=qkw5mdwezibsnimezezf6rlaz&st=sf4w4nnp" type="video/mp4">
       </video>
     </div>
@@ -582,21 +582,21 @@
   <section class="preFooter">
     <section class="connections">
       <article class="follow">
-        <div class="label">
+        <header class="label">
           FOLLOW<img src="../media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
-        </div>
+        </header>
         <ul class="connectBtn">
           <li><a href="https://www.linkedin.com/in/richard-lau-70003a217/" class="connectionLink" target="_blank" rel="noopener">LinkedIn</a></li>
           <li><a href="https://www.instagram.com/richard_bingo/" class="connectionLink" target="_blank" rel="noopener">Instagram</a></li>
         </ul>
       </article>
       <article class="email">
-        <div class="label">
+        <header class="label">
           EMAIL<img src="../media/arrowBottomLeft.svg" class="arrowBottomLeft" alt="Arrow pointing downwards to the left."></img>
-        </div>
+        </header>
         <ul class="connectBtn">
           <li><a href="mailto:richardlau1167@gmail.com" class="connectionLink">richardlau1167@gmail.com</a></li>
-          <img src="../media/poro_refined.gif" alt="8-Bit Poro from League of Legends." class="poro"></img>
+          <li class="poroContainer"><img src="../media/poro_refined.gif" alt="8-Bit Poro from League of Legends." class="poro"></img></li>
         </ul>
       </article>
     </section>
