--- a/home.html
+++ b/home.html
@@ -23,8 +23,8 @@
 <!-- This is our navigation bar. -->  
 <section class="fixedContainer">
   <div class="navContainer">
-    <header class="navbar">
-      <a href="https://richardlau.ca" class="logo" aria-label="Button to Homepage">richard</a>
+    <header class="navbar" role="banner">
+      <a href="https://richardlau.ca" class="logo" role="link" aria-label="Button to Homepage">richard</a>
       <nav class="nav-links">
         <ul>
           <li><a href="#">about</a></li>
