--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -16,10 +16,8 @@
 <!-- This is our navigation bar. -->  
 <section class="fixedContainer">
   <div class="navContainer">
-    <header class="navbar">
-      <div class="brand">
-        <a href="https://richardlau.ca" class="logo">richard</a>
-      </div>
+    <header class="navbar" role="banner">
+      <a href="https://richardlau.ca" class="logo" role="link" aria-label="Button to Homepage">richard</a>
       <nav class="nav-links">
         <ul>
           <li><a href="#">about</a></li>
@@ -55,22 +53,22 @@
     <div class ="categories">
       <div class="sectionDivider"></div>
       <article class="prText">
-        <h4 class="prSubHeading">Timeframe</h4>
+        <h3 class="prSubHeading">Timeframe</h3>
         <p class="date">January – February 2025<br>April 2025</br></p>
       </article>
       <div class="sectionDivider"></div>
       <article class="prText">
-        <h4 class="prSubHeading">Context</h4>
+        <h3 class="prSubHeading">Context</h3>
         <p>Although global datasets like the UN's Sustainable Development Goals are publicly available, they often remain cognitively inaccessible to general audiences. In a 2025 survey, <a href="https://www.qlik.com/us/data-literacy#:~:text=%E2%80%9CIn%20a%20recent%20Censuswide%20survey%20on%20behalf%20of%20Qlik%2C%20of%20more%20than%207%2C300%20business%20decision%20makers%2C%20just%2024%25%20consider%20themselves%20data%20literate.%E2%80%9D" class="reference1" target="_blank" rel="noopener">only 24% of business decision makers</a> considered themselves data literate. This gap makes complex metrics feel distant and inaccessible—not only in understanding global issues but also in <a href="https://online.hbs.edu/blog/post/data-literacy#:~:text=Data%20literacy%20can%20help%20non%2Ddata%20professionals%20read%20and%20understand%20data%20and%20use%20it%20to%20inform%20their%20decision%2Dmaking.%20As%20such%2C%20data%20literacy%20is%20increasingly%20important%20not%20just%20for%20executive%20leadership%2C%20but%20for%20managers%20and%20employees%20who%20want%20to%20increase%20the%20value%20they%20bring%20to%20their%20organization." class="reference1" target="_blank" rel="noopener">applying data within everyday decision-making</a>—leading to missed opportunities for awareness, education, and meaningful action.</p>
       </article>
       <div class="sectionDivider"></div>
       <article class="prText">
-        <h4 class="prSubHeading">Solution</h4>
+        <h3 class="prSubHeading">Solution</h3>
         <p>Art of Visual Data (AoVD) tackles the challenge of making <a href="https://unstats.un.org/sdgs/files/report/2024/E_2024_54_Statistical_Annex_I_and_II.pdf" class="reference1" target="_blank" rel="noopener">complex global data</a> accessible and understandable. This project removes the cognitive barrier of complex data through an engaging visual storytelling, accessible UI/UX, and gamified learning. By translating abstract statistics into human-centered visuals, AoVD empowers users to not only understand data but care about it—building data literacy while connecting to real-world problems.</p>
       </article>
       <div class="sectionDivider"></div>
       <article class="prText">
-        <h4 class="prSubHeading">Team</h4>
+        <h3 class="prSubHeading">Team</h3>
         <p>Individual</p>
       </article>
     </div>
@@ -114,7 +112,7 @@
       <figcaption class="paragraphStyle1">Full Pre-Designed Datasets</figcaption>
     </div>  
 
-    <aside class="quote">
+    <article class="quote">
       <div class="quoteBox">
         <div class="quoteText">
           <blockquote>There is no such thing as information overload, just bad design.</blockquote>
@@ -122,7 +120,7 @@
         </div>
         <p id="author">Edward Tufte</p>
       </div>
-    </aside>
+    </article>
   </section>
 
   <section class="introSummary">
@@ -161,7 +159,7 @@
         <article class="personaContainer">
           <div class="personaIdentifier">
             <div class="personaHeadings">
-              <h5 class="personaGreeting"><em>What's up!</em></h5>
+              <small class="personaGreeting"><em>What's up!</em></small>
               <h4 class="personaName">Eris</h4>
             </div>
             <img src="caseStudy1/eris.png" class="personaImage" alt="Persona Image of Eris."></img>
@@ -204,7 +202,7 @@
         <article class="personaContainer">
           <div class="personaIdentifier">
             <div class="personaHeadings">
-              <h5 class="personaGreeting"><em>Heyo!</em></h5>
+              <small class="personaGreeting"><em>Heyo!</em></small>
               <h4 class="personaName">Lewis</h4>
             </div>
             <img src="caseStudy1/lewis.png" class="personaImage" alt="Persona Image of Lewis."></img>
@@ -263,7 +261,7 @@
 
 <span id="space"></span>
 
-      <aside class="personaInsights">
+      <aside class="personaInsights" role="complementary">
         <header class="gatheringDataHeaders">
           <h3>did you know...</h3>
         </header>
@@ -291,21 +289,21 @@
     <div class="researchPoints">
       <article class="point">
         <header>
-          <h4>Accessibility</h4>
+          <h3>Accessibility</h3>
           <img src="caseStudy1/accessibility.svg" alt="Eye Vector."></img>
         </header>
         <p class="paragraphStyle2">65% of the general population are visual learners, a learning style that research usually isn’t done in. It is essential that we are inclusive in the variability of all our user's abilities.</p>
       </article>
        <article class="point">
         <header>
-          <h4>Confidence</h4>
+          <h3>Confidence</h3>
           <img src="caseStudy1/confidence.svg" alt="Mountain Vector."></img>
         </header>
         <p class="paragraphStyle2">Only 24% of business decision makers considered themselves data literate. We need to improve user confidence and understanding in reading data.</p>
       </article>     
        <article class="point">
         <header>
-          <h4>Connection</h4>
+          <h3>Connection</h3>
           <img src="caseStudy1/connection.svg" alt="Connection Vector."></img>
         </header>
         <p class="paragraphStyle2">Engaging stories improve information retention up to 70%. We need a unique tool able to compare multiple metrics and visually speak on how the data moves or their relationships.</p>
@@ -365,7 +363,7 @@
     <p class="paragraphStyle2">Although patterns and relationships is visually established as an upward trend, we lack linguistical confirmation. This challenges our linguistically learners as well as our weaker data readers. What we needed was a way to educate our users of the graph's context and contents.</p>
     
     <article class="challengeVersion1">
-      <aside class="sideBox">
+      <aside class="sideBox" role="complementary">
         <h4>What's the challenge?</h4>
         <ul class="sideBoxList">
           <li>We lack linguistical confirmation, this may affect the confidence in our users.</li>
@@ -425,7 +423,7 @@
             <source src="https://dl.dropboxusercontent.com/scl/fi/dw57ko91xz0a219t1vwpn/compressed_animation.mp4?rlkey=nyils2suijqrpxvba83fn1bya&st=w3o0x8qg" type="video/mp4">
           </video>
         </div>
-        <aside class="sideBoxFinal">
+        <aside class="sideBoxFinal" role="complementary">
           <h4>Article Landing Page</h4>
           <p class="sideBoxParagraph">
             The story 'You Can’t See Me' is a featured article on the website’s homepage. This initial article page provides a journalistic summary of the data observed, summarizing data trends and key issues, catering to those who struggle with reading data or want the general idea.
@@ -434,7 +432,7 @@
       </article>
       
       <article class="videoCaptionCombination1">
-        <aside class="sideBoxFinal">
+        <aside class="sideBoxFinal" role="complementary">
           <h4>Article Detailed Datasets</h4>
           <p class="sideBoxParagraph">
             With five different SDGs, 11 data points, and multiple timelines, the most effective storytelling approach was to compare regional trends with world averages and explore how they relate to other SDG metrics.<br><br>Additionally, the use of interactive graphs conveys all the data while maintaining comprehensibility.
@@ -461,7 +459,7 @@
     </figure>  
 
     <figure id="motionGraphic">
-      <video aria-label="Motion graphic of Art of Visual Data's branding, purpose, and mockups." class="mockupImage" loop controls playsinline>
+      <video aria-label="Motion graphic of Art of Visual Data's branding, purpose, and mockups." class="mockupImage" loop controls muted playsinline>
         <source src="https://dl.dropboxusercontent.com/scl/fi/3oevj4f6st0b3ephwls05/aovdMotionPresentationTrimmed.mp4?rlkey=6la2199f7nhiudzr63714yvy2&st=hgtj8cna" type="video/mp4">
       </video>
     </figure>
@@ -554,7 +552,7 @@
         <li>It’s important to always keep accessibility in mind while designing, if they can’t see it, it doesn’t exist!</li>
         <li>People love a good story. Build narratives, make an impact.</li>
         <li>Relax on the animations, our developers don’t need overtime!</li>
-        <br>       
+        <li class="listSpacing"></li>
       </ul>
     </div>  
   </section>
