--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -325,30 +325,33 @@
   </section>
 
   <section class="articleIdeation">
-    <header class="gatheringDataHeaders">
-      <h3>article ideation</h3>
-      <h2>What are we creating?</h2>
+    <header class="processHeading">
+      <img src="caseStudy1/search.svg" alt="Magnifying Glass Icon."></img>
+      <h2>What graphs can our users read?</h2>
     </header>
-    <div class="sectionDivider"></div>
 
     <article class="ideation">
+      <div class="ideationText">
+        <h3>Simplifying Data Visualization</h3>
+        <p>For our datasets, what we’re trying to create is a platform for stories from multiple SDG indicator datasets to compare, contrast, and show relationships between metrics.<br><br>We started with different ideations of how we can compare different metrics with each other, confronting the challenge of so many variables, timelines, and scales.</p>
+      </div>
       <figure class="ideationFigure">
         <img src="caseStudy1/initialSketch.png" alt="Initial sketch of graph visualization."></img>
-      </figure>
-      <div class="ideationText" id="right">
-        <p>For our detailed datasets, what we're trying to create is a platform for stories from multiple SDG indicator datasets to compare, contrast, and show relationships between metrics. <br><br>We started with different ideations of how we can compare different metrics with each other, confronting the challenge of so many variables, timelines, and scales.</p>
-      </div> 
+      </figure> 
     </article>
     
 <div id="space2"></div>
 
     <article class="ideation">
-      <div class="ideationText" id="left">
-        <p>The types of graphs I decided to use were simple, commonly seen graphs such as bar graphs, pictograms, pie graphs, etc...<br><br>For the general style of this website, I started out with a black/orange colour palette, eventually switching to a light version.</p>
-      </div>
       <figure class="ideationFigure">
-        <img src="caseStudy1/landingPageExperiment.png" alt="Initial sketch of graph visualization."></img>
+        <video aria-label="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage" autoplay muted loop playsinline>
+           <source src="https://dl.dropboxusercontent.com/scl/fi/rhpu7s4j8l12pb2iids26/graphideationInteractionC.mp4?rlkey=rrvxdp8kanndz35u8ugqw0wb8" type="video/mp4">
+        </video>
       </figure>       
+      <div class="ideationText">
+        <h3>Pairing interaction with data</h3>
+        <p>The types of graphs I decided to use were simple, common, and easy-to-read graphs such as bar graphs, pictograms, pie graphs, etc...<br><br>For our detailed datasets, I utilized only the line graph/bubble chart to create a consistent base to pair with interactions such as hover effects. This creates a straightforward and consistent interaction system.</p>
+      </div>
     </article>      
 
   </section>
@@ -360,7 +363,7 @@
     </header>
     <div class="sectionDivider"></div>
 
-    <p class="paragraphStyle2">Although patterns and relationships is visually established as an upward trend, we lack linguistical confirmation. This challenges our linguistically learners as well as our weaker data readers. What we needed was a way to educate our users of the graph's context and contents.</p>
+    <p class="paragraphStyle2">Although patterns and relationships is visually established as an upward trend, we lack linguistical confirmation. This challenges our user's confidence and understanding. What we needed was a way to educate our users of the graph's context and contents.</p>
     
     <article class="challengeVersion1">
       <aside class="sideBox" role="complementary" aria-labelledby="challengeHeading">
@@ -606,7 +609,7 @@
  <footer class="footerContent">
   <div class="divider"></div>
   <div class="siteInfo">
-    <p>© 2023 Richard Lau. All rights reserved.</p>
+    <p>© 2025 Richard Lau. All rights reserved.</p>
     <p>imagined and crafted by richard | ft. healthy sleep schedule</p>
   </div>
 </footer>
