--- a/home.html
+++ b/home.html
@@ -57,10 +57,10 @@
             <a href="#">designer</a>
             <a href="#">print designer</a>
             <a href="#">storyteller</a>
-            <a href="#">ui/ux designer</a>
+            <a href="#">system builder</a>
             <a href="#">typographer</a>
             <a href="#">product designer</a>
-            <a href="#">artist</a>
+            <a href="#">motion menace</a>
           </div>
         </div>
       </div>
@@ -177,7 +177,7 @@
 <footer class="footerContent">
   <div class="divider"></div>
   <div class="siteInfo">
-    <p>© 2023 Richard Lau. All rights reserved.</p>
+    <p>© 2025 Richard Lau. All rights reserved.</p>
     <p>imagined and crafted by richard | ft. healthy sleep schedule</p>
   </div>
 </footer>
